@@ -2,6 +2,11 @@
 
         * Edje: When cursor is located to each edge, entry now doesn't grab events for cursor movement.
 
+2013-04-10  Carsten Haitzler (The Rasterman)
+
+        * Evas: Add glx buffer age support for automatic partial
+          redraw in glx.
+
 2013-04-09  Jérémy Zurcher (jeyzu)
 
         * Eina: Add eina_inlist_first and eina_inlist_last
